[package]
name = "xpallet-gateway-records"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
parity-scale-codec = { workspace = true }
serde = { workspace = true, optional = true }
scale-info = { workspace = true }
log = { workspace = true }

# Substrate primitives
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Substrate pallets
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }

# BEVM primitives
bevm-primitives = { path = "../../../primitives", default-features = false }
xp-protocol = { path = "../../../primitives/protocol", default-features = false }
xp-runtime = { path = "../../../primitives/runtime", default-features = false }
xp-assets-registrar = { path = "../../../primitives/assets-registrar", default-features = false }

# BEVM pallets
xpallet-btc-ledger = { path = "../../btc-ledger", default-features = false }
xpallet-support = { path = "../../support", default-features = false }

[dev-dependencies]
sp-io = { workspace = true }
sp-core = { workspace = true }
pallet-balances = { workspace = true }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "serde",
    "scale-info/std",
    "log/std",
    # Substrate primitives
    "sp-runtime/std",
    "sp-std/std",
    # Substrate pallets
    "frame-support/std",
    "frame-system/std",
    # BEVM primitives
    "bevm-primitives/std",
    "xp-protocol/std",
    "xp-runtime/std",
    "xp-assets-registrar/std",
    # BEVM pallets
    "xpallet-btc-ledger/std",
    "xpallet-support/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
]
try-runtime = ["frame-support/try-runtime"]
