[package]
name = "xpallet-gateway-records"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.192", features = ["derive", "alloc"], optional = true }
log = { version = "0.4.17", default-features = false }

# Substrate primitives
sp-runtime = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }
sp-std = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }

# Substrate pallets
frame-benchmarking = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false, optional = true }
frame-support = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }
frame-system = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }

# BEVM primitives
bevm-primitives = { path = "../../../primitives", default-features = false }
xp-protocol = { path = "../../../primitives/protocol", default-features = false }
xp-runtime = { path = "../../../primitives/runtime", default-features = false }
xp-assets-registrar = { path = "../../../primitives/assets-registrar", default-features = false }

# BEVM pallets
xpallet-btc-ledger = { path = "../../btc-ledger", default-features = false }
xpallet-support = { path = "../../support", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0" }
sp-core = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0" }
pallet-balances = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0" }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "serde",
    "log/std",
    # Substrate primitives
    "sp-runtime/std",
    "sp-std/std",
    # Substrate pallets
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    # BEVM primitives
    "bevm-primitives/std",
    "xp-protocol/std",
    "xp-runtime/std",
    "xp-assets-registrar/std",
    # BEVM pallets
    "xpallet-btc-ledger/std",
    "xpallet-support/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
