[package]
name = "xpallet-mining-staking-rpc"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = ["derive", "max-encoded-len"] }
jsonrpsee = { version = "0.16.2", features = ["client-core", "server", "macros"] }

# Substrate primitives
sp-api = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }
sp-blockchain = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }
sp-runtime = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0", default-features = false }


# BEVM primitives
xp-rpc = { path = "../../../primitives/rpc" }

# BEVM pallets api
xpallet-mining-staking-rpc-runtime-api = { path = "./runtime-api" }
