[package]
name = "xpallet-transaction-fee-rpc"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true }
serde = { workspace = true }
jsonrpsee = { workspace = true, features = ["client-core", "server", "macros"] }

# Substrate primitives
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }

xp-rpc = { path = "../../../primitives/rpc" }

# BEVM pallets api
xpallet-transaction-fee-rpc-runtime-api = { path = "./runtime-api" }
